$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-11-04 [B] Removed value 'SERVER_PROTOCOL' from client ID generator (thread ID 59698) {eenemeenemuu}
2010-11-02 [C] Added label for 'remember me' checkbox (thread ID 67840) {eenemeenemuu}
2010-11-01 [B] Skip unknown file types during batch-add process (thread ID 67815) {eenemeenemuu}
2010-10-14 [A] Added plugin hooks 'after_edit_file', 'upload_html_pre_move' and 'upload_swf_pre_move' (thread ID 60896) {eenemeenemuu}
2010-10-14 [C] Added additional submit button on top of 'Edit files' form (thread ID 67563) {eenemeenemuu}
2010-10-13 [B] Use IPTC headline instead of IPTC title as picture title according to docs (thread ID 61380) {eenemeenemuu}
2010-10-13 [B] Fixed implementation of plugin hook 'ip_information' (thread ID 67187) {eenemeenemuu}
2010-10-12 [B] Fixed last visit display in user manager when bridged with SMF2 (thread ID 67422) {eenemeenemuu}
2010-10-03 [B] Fixed template placeholder bug that caused cut off tags {Nibbler}
2010-10-02 [A] Added error message support for the batch add process {Nibbler}
2010-10-01 [B] Fixed use of mysql_insert_id (thread ID 67402) {Nibbler}
2010-10-01 [B] Fixed critical error on memberlist when bridged (thread ID 64678) {eenemeenemuu}
2010-09-30 [C] Fixed deprecated message on pluginmgr.php (thread ID 67308) {eenemeenemuu}
2010-09-27 [B] Fixed session table name in SMF bridge files (thread ID 67169) {eenemeenemuu}
2010-09-27 [C] Fixed error message if uploaded file exceeds dimension limit (thread ID 67282) {eenemeenemuu}
2010-09-26 [M] Removed support for GD1 (thread ID 66761) {Nibbler}